# Trees_implementation

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  run_linter.sh
benchmarks/: bench_framework.cpp  benchmarks.h  run_benchmarks.cpp
cmake/: BuildFlags.cmake
experiments/: !_converging_int_series_erase_after_increasing_series_insert.csv  !_converging_int_series_erase_after_increasing_series_insert_bench.csv  !_converging_int_series_erase_after_random_sparse_series_insert.csv  !_converging_int_series_erase_after_random_sparse_series_insert_bench.csv  !_converging_int_series_insert_bench.csv  !_decreasing_int_series_erase_after_increasing_series_insert.csv  !_decreasing_int_series_erase_after_increasing_series_insert_bench.csv  !_decreasing_int_series_erase_after_random_sparse_series_insert.csv  !_decreasing_int_series_erase_after_random_sparse_series_insert_bench.csv  !_decreasing_int_series_insert_bench.csv  !_diverging_int_series_erase_after_increasing_series_insert.csv  !_diverging_int_series_erase_after_increasing_series_insert_bench.csv  !_diverging_int_series_erase_after_random_sparse_series_insert.csv  !_diverging_int_series_erase_after_random_sparse_series_insert_bench.csv  !_diverging_int_series_insert_bench.csv  !_find_int_after_random_sparse_insert_bench.csv  !_find_random_sparse_int_after_random_sparse_insert_bench.csv  !_increasing_int_series_erase_after_increasing_series_insert.csv  !_increasing_int_series_erase_after_increasing_series_insert_bench.csv  !_increasing_int_series_erase_after_random_sparse_series_insert.csv  !_increasing_int_series_erase_after_random_sparse_series_insert_bench.csv  !_increasing_int_series_insert_bench.csv  !_lower_bound_random_sparse_int_after_random_sparse_insert_bench.csv  !_nonexistent_int_series_erase_after_increasing_series_insert.csv  !_nonexistent_int_series_erase_after_increasing_series_insert_bench.csv  !_nonexistent_int_series_erase_after_random_sparse_series_insert.csv  !_nonexistent_int_series_erase_after_random_sparse_series_insert_bench.csv  !_nonexistent_strings_erase_after_random_insert_bench.csv  !_random_dense_int_series_insert_bench.csv  !_random_dense_strings_insert_bench.csv  !_random_insert_and_erase_int_alternation_bench.csv  !_random_int_series_erase_after_increasing_series_insert.csv  !_random_int_series_erase_after_increasing_series_insert_bench.csv  !_random_int_series_erase_after_random_sparse_series_insert.csv  %_simple_bench.csv  (+8 more)
(+36 files in other folders)
